Implement hiding a job if jobs closed

--- a/src/sass/popup.sass
+++ b/src/sass/popup.sass
@@ -32,6 +32,9 @@ nav form
   &:not(:first-child)
     margin-top: 5px
 
+  &.closed
+    display: none
+
   img
     float: left
     width: 80px
@@ -43,3 +46,6 @@ nav form
   &:hover
     color: #548e3a
     text-decoration: none
+
+.closed-job-link
+  float: right
